--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -20,7 +20,7 @@
           <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div id="welcome" class="non-jumbo text-center">
               <img src="${path}/static/images/flocklogo2.png" alt="Flock"/>
-            <h1>Detroit</h1>
+            <h1>Your house</h1>
             <h2>2020</h2>
           </div>
           </div>
@@ -34,6 +34,8 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>What is Flock?</h2>
           <p>Flock is the <a href="https://docs.fedoraproject.org/en-US/project/" target="_blank">Fedora Project</a>'s annual contributor-focused conference. It typically alternates between European and North American locations. The conference provides a venue for face to face meetings and conversations. It is also a place to celebrate our community.</p>
+          
+          <p><strong>Due to COVID-19, we have decided to cancel Flock 2020 in Detroit.</strong> But we still want to do something fun, so we're having <a href="https://communityblog.fedoraproject.org/nest-with-fedora-call-for-ideas/">Nest With Fedora</a>! The safety of our community is the most important thing, and we look forward to getting everyone together in 2021.</p>
 
           <h2>What will we do at Flock?</h2>
 <!--          <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p> -->
@@ -60,6 +62,7 @@
             <strong>The <a href="https://flock2019.sched.com">Flock 2019 schedule</a> is now available!</strong>
           </p>
           -->
+          <!--
           <h2>Event Dates</h2>
           <p>Flock will begin the morning of Thursday, August 6. Sessions will continue each day until Sunday, August 9. You should plan to arrive by Wednesday, August 5 and to depart no sooner than Sunday afternoon for the best experience.</p>
 
@@ -89,6 +92,7 @@
                 <td class="flock">Aug <span>9</span></td>
               </tr>
             </table>
+            -->
 
 <!--
             <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
@@ -113,9 +117,9 @@
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-            <h2>Call for Proposals</h2>
+            <h2>Call for Ideas</h2>
 
-	      <p>Coming soon...</p>
+	      <p>Submit your ideas for Nest With Fedora in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p>
  <!--
             <p>The CfP is now closed and the <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
             <p>We invite you to submit proposals for talks (25/50 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
@@ -178,7 +182,7 @@
             <div class="col-xs-12 col-sm-6">
               <h3>Social Media</h3>
               <p>
-                Use the <strong>#FlockToFedora</strong> and <strong>#DetroitFlockCity</strong> hashtags on your preferred social media platforms.
+                Use the <strong>#NestWithFedora</strong> hashtags on your preferred social media platforms.
                 Follow <a href="https://twitter.com/fedora">@fedora</a> on Twitter for updates.
               </p>
             </div>
