--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -61,12 +61,20 @@
           <span class="grey">${_('Powerful completely open-source and free tool for amateurs and professionals.')}</span></div>
         </div>
         <div class="col-md-5 text-center">
+          <div class="spin-banner"><a href="/${lang}/comp-neuro"><img class="screenshot-banner" src="${path}/static/images/comp-neuro-banner.png" alt="Comp Neuro banner" /></a></div>
+          <a href="/${lang}/comp-neuro"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-comp-neuro.jpg" alt="Comp Neuro Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/comp-neuro"><h3>${_('Explore the Brain.')}</h3></a>
+          <span class="grey">${_('A plethora of Free/Open source computational modelling tools for Neuroscience.')}</span></div>
+        </div>
+       </div>
+
+       <div class="row top-margin high">
+        <div class="col-md-5 col-md-offset-1 text-center">
           <div class="spin-banner"><a href="/${lang}/design-suite"><img class="screenshot-banner" src="${path}/static/images/design-suite-banner.png" alt="Design suite banner" /></a></div>
           <a href="/${lang}/design-suite"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-design.jpg" alt="Design-suite Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/design-suite"><h3>${_('Open Creativity.')}</h3></a>
           <span class="grey">${_('Visual design, multimedia production, and publishing suite of free and open source creative tools.')}</span></div>
         </div>
-       </div>
 
 <!-- DID NOT BUILD FOR F31
        <div class="row top-margin high">
@@ -97,24 +105,23 @@
 
 	-->
 
-       <div class="row top-margin high">
-        <div class="col-md-5 col-md-offset-1 text-center">
+        <div class="col-md-5 text-center">
           <div class="spin-banner"><a href="/${lang}/python-classroom"><img class="screenshot-banner" src="${path}/static/images/python-classroom/python-classroom-banner.png" alt="Python Classroom banner" /></a></div>
           <a href="/${lang}/python-classroom"><img class="screenshot" src="${path}/static/images/python-classroom/screenshot-python-classroom.jpg" alt="Python Classroom Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/python-classroom"><h3>${_('Teach Python with ease')}</h3></a>
           <span class="grey">${_('A classroom lab for teaching the Python programming language to students')}</span></div>
         </div>
+        </div>
 
-        <div class="col-md-5 text-center">
+       <div class="row top-margin high bottom-space">
+       <div class="col-md-5 col-md-offset-1 text-center">
           <div class="spin-banner"><a href="/${lang}/security"><img class="screenshot-banner" src="${path}/static/images/security-lab-banner.png" alt="Security Lab banner" /></a></div>
           <a href="/${lang}/security"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-security.jpg" alt="Security Lab Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/security"><h3>${_('Thorough, safe and secure.')}</h3></a>
           <span class="grey">${_('A safe test environment to work on security auditing, forensics, system rescue and teaching security testing methodologies.')}</span></div>
         </div>
-       </div>
  
-       <div class="row top-margin high bottom-space">
-       <div class="col-md-5 col-md-offset-1 text-center">
+        <div class="col-md-5 text-center">
           <div class="spin-banner"><a href="/${lang}/robotics"><img class="screenshot-banner" src="${path}/static/images/robotics-suite-banner.png" alt="Robotics banner" /></a></div>
           <a href="/${lang}/robotics"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-robotics.jpg" alt="Robotics Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/robotics"><h3>${_('Dive into Robotics.')}</h3></a>
@@ -133,6 +140,14 @@
           <a href="/${lang}/astronomy"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-astronomy.jpg" alt="Astronomy Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/Astronomy"><h3>${_('Explore the Outer Space.')}</h3></a>
           <span class="grey">${_('Powerful completely open-source and free tool for amateurs and professionals.')}</span></div>
+        </div>
+      </div>
+      <div class="row top-margin">
+        <div class="col-xs-12 text-center">
+          <div class="spin-banner"><a href="/${lang}/comp-neuro"><img class="screenshot-banner" src="${path}/static/images/comp-neuro-banner.png" alt="Comp Neuro banner" /></a></div>
+          <a href="/${lang}/comp-neuro"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-comp-neuro.jpg" alt="Comp Neuro Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/design-suite"><h3>${_('Explore the Brain.')}</h3></a>
+          <span class="grey">${_('A plethora of Free/Open source computational modelling tools for Neuroscience.')}</span></div>
         </div>
       </div>
       <div class="row top-margin">
