--- a/labs.fedoraproject.org/data/content/comp-neuro/index.html
+++ b/labs.fedoraproject.org/data/content/comp-neuro/index.html
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 text-justify top-space bottom-space">
           <p>${_('A plethora of Free/Open source computational modelling tools for Neuroscience in one easy to use downloadable image! Download, install (or don\'t!) and get down to work!')}</p>
-          <p>${_('The NeuroFedora team has developed the Comp-Neuro lab specially to enable computational neuroscience. It includes everything you will need to get your work done—modeling software; analysis tools, general productivity tools—all well integrated with the modern GNOME platform to give you a complete operating system.')}</p>
+          <p>${_('The NeuroFedora team has developed the Comp-Neuro lab specially to enable computational neuroscience. It includes everything you will need to get your work done—modelling software, analysis tools, general productivity tools—all well integrated with the modern GNOME platform to give you a complete operating system.')}</p>
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@
           <div class="border">
             <img src="${path}/static/images/comp-neuro/neuron-logo.png" alt="Neuron logo" />
             <h4>${Markup(_('Neuron'))}</h4>
-            <!-- <p>${_('Multiple implementations of the Python programming language, including CPython 3.7 and PyPy 3.5')}</p> -->
+            <p>${_('A simulation environment for detailed modelling of individual neurons and networks of neurons.')}</p>
             <a href="https://neuron.yale.edu/neuron/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
@@ -80,7 +80,7 @@
           <div class="border">
           <img src="${path}/static/images/comp-neuro/brian.webp" alt="Brian logo" />
             <h4>${_('Brian')}</h4>
-           <!-- <p>${_('All you need to learn or teach science in Python including SciPy')}</p> -->
+            <p>${_('A highly flexible and extensible simulator for modelling spiking neural networks.')}</p>
             <a href="https://briansimulator.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
@@ -88,8 +88,8 @@
           <div class="border">
           	<img src="${path}/static/images/comp-neuro/genesis.gif" alt="GENESIS logo" />
           	<h4>${_('GENESIS')}</h4>
-          	<!-- <p>${_('An enhanced interactive Python shell')}</p> -->
-          	<a href="https://github.com/genesis-sim/">${Markup(_('Learn More &gt;'))}</a>
+            <p>${_('Model subcellular components, biochemical reactions, complex models of single neurons, and networks.')}</p>
+          	<a href="http://genesis-sim.org/GENESIS/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
           <div class="border">
           	<img src="${path}/static/images/comp-neuro/nest.png" alt="NEST logo" />
           	<h4>${_('NEST')}</h4>
-          	<!-- <p>${_('A web-based notebook environment for interactive computing and visualizations')}</p> -->
+            <p>${_('A simulation environment for modelling large scale spiking neural networks.')}</p>
           	<a href="https://www.nest-simulator.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
@@ -106,7 +106,7 @@
           <div class="border">
           	<img src="${path}/static/images/comp-neuro/scipy.webp" alt="SciPy logo" />
           	<h4>${_('SciPy')}</h4>
-          <!--	<p>${_('Popular version control system')}</p> -->
+            <p>${_('The complete Python Science stack, for teaching, modelling, and analysis.')}</p>
           	<a href="https://www.scipy.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
@@ -114,7 +114,7 @@
           <div class="border">
 	      	<img src="${path}/static/images/comp-neuro/moose.png" alt="MOOSE Logo" />
           	<h4>${_('MOOSE')}</h4>
-          	<!-- <p>${_('virtualenv management and test command line tool')}</p> -->
+            <p>${_('Simulate stochastic chemical computations, multicompartment single-neuron models, and spiking neuron network models.')}</p>
           	<a href="https://moose.ncbs.res.in/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
