codemod - link all checksums to getfedora instead
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/arm.fedoraproject.org/data/content/verify.html
+++ b/arm.fedoraproject.org/data/content/verify.html
@@ -35,25 +35,25 @@
         <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Server')}</h4>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Server!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="https://getfedora.org/static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Server!')}</a>
           </div>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Minimal!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="https://getfedora.org/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Minimal!')}</a>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Desktop')}</h4>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Workstation!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="https://getfedora.org/static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Workstation!')}</a>
           </div>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Spins!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="https://getfedora.org/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Spins!')}</a>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Labs')}</h4>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Labs!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="https://getfedora.org/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Labs!')}</a>
           </div>
         </div>
     </div>
