--- a/spins.fedoraproject.org/data/content/verify.html
+++ b/spins.fedoraproject.org/data/content/verify.html
@@ -33,7 +33,7 @@
     </div>
     <div class="row bottom-margin">
         <div class="col-sm-4 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('Verify 64-bit!')}</a>
+          <a class="btn btn-default btn-topmargin" href="https://getfedora.org/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('Verify 64-bit!')}</a>
         </div>
     </div>
 
