Fix a few links for f32
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -264,7 +264,7 @@
             <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['ARM_Mate']}</p>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="https://download.fedoraproject.org/pub/alt/unofficial/releases/${global_variables.release['curr_id']}/armhfp/Fedora-Mate-armhfp-${global_variables.release['curr_arm_id']}-20190427.n.0-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-Mate-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -514,7 +514,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Python-Classroom')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Labs/armhfp/images/Fedora-Python-Classroom-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/armhfp/images/Fedora-Python-Classroom-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
@@ -543,7 +543,7 @@
           <h3>${_('Python-Classroom')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Labs/armhfp/images/Fedora-Python-Classroom-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/armhfp/images/Fedora-Python-Classroom-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
