--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -71,7 +71,7 @@
             <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['aarch64_WS']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Workstation/aarch64/images/Fedora-Workstation-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_alt_id']}/Workstation/aarch64/images/Fedora-Workstation-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -201,7 +201,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Fedora Workstation')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Workstation/aarch64/images/Fedora-Workstation-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_alt_id']}/Workstation/aarch64/images/Fedora-Workstation-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -306,7 +306,7 @@
           <h3>${_('Fedora Workstation')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Workstation/aarch64/images/Fedora-Workstation-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_alt_id']}/Workstation/aarch64/images/Fedora-Workstation-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -456,6 +456,20 @@
           </div>
           <div class="white">
             <div class="col-md-1">
+            <img src="/static/images/workstation.png" />
+            </div>
+            <div class="col-md-4">
+            <h3>${_('Fedora Workstation')}</h3>
+            </div>
+            <div class="col-md-3">
+            <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['aarch64_WS']}</p>
+            </div>
+            <div class="col-md-4">
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Workstation/ppc64le/iso/Fedora-Workstation-Live-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            </div>
+          </div>
+          <div class="white">
+            <div class="col-md-1">
             <img src="/static/images/ev.png" />
             </div>
             <div class="col-md-4">
@@ -549,6 +563,15 @@
         </div>
         <div class="white">
           <div class="col-xs-3">
+          <img src="/static/images/workstation.png" />
+          </div>
+          <div class="col-xs-9">
+          <h3>${_('Fedora Workstation')}</h3>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Workstation/ppc64le/iso/Fedora-Workstation-Live-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          </div>
+        </div>
+        <div class="white">
+          <div class="col-xs-3">
           <img src="/static/images/ev.png" />
           </div>
           <div class="col-xs-9">
@@ -623,6 +646,19 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+
+        <div class="white">
+          <div class="col-sm-3">
+          <img src="/static/images/workstation.png" />
+          </div>
+          <div class="col-sm-5">
+          <h3>${_('Fedora Workstation')}</h3>
+          </div>
+          <div class="col-sm-4">
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Workstation/ppc64le/iso/Fedora-Workstation-Live-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          </div>
+        </div>
+
         <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/ev.png" />
