--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -96,32 +96,33 @@
       </div>
 -->
 
-        <!--<div class="col-md-5 text-center">
+        <div class="col-md-5 text-center">
           <div class="spin-banner"><a href="/${lang}/jam"><img class="screenshot-banner" src="${path}/static/images/jam-banner.png" alt="Jam banner" /></a></div>
           <a href="/${lang}/jam"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-jam.jpg" alt="Jam Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/jam"><h3>${_('Unleash your inner musician.')}</h3></a>
           <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
         </div>
+        </div>
 
-	-->
 
-        <div class="col-md-5 text-center">
+       <div class="row top-margin high">
+       <div class="col-md-5 col-md-offset-1 text-center">
           <div class="spin-banner"><a href="/${lang}/python-classroom"><img class="screenshot-banner" src="${path}/static/images/python-classroom/python-classroom-banner.png" alt="Python Classroom banner" /></a></div>
           <a href="/${lang}/python-classroom"><img class="screenshot" src="${path}/static/images/python-classroom/screenshot-python-classroom.jpg" alt="Python Classroom Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/python-classroom"><h3>${_('Teach Python with ease')}</h3></a>
           <span class="grey">${_('A classroom lab for teaching the Python programming language to students')}</span></div>
         </div>
-        </div>
 
-       <div class="row top-margin high bottom-space">
-       <div class="col-md-5 col-md-offset-1 text-center">
+        <div class="col-md-5 text-center">
           <div class="spin-banner"><a href="/${lang}/security"><img class="screenshot-banner" src="${path}/static/images/security-lab-banner.png" alt="Security Lab banner" /></a></div>
           <a href="/${lang}/security"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-security.jpg" alt="Security Lab Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/security"><h3>${_('Thorough, safe and secure.')}</h3></a>
           <span class="grey">${_('A safe test environment to work on security auditing, forensics, system rescue and teaching security testing methodologies.')}</span></div>
         </div>
- 
-        <div class="col-md-5 text-center">
+        </div>
+
+       <div class="row top-margin high bottom-space">
+       <div class="col-md-5 col-md-offset-1 text-center">
           <div class="spin-banner"><a href="/${lang}/robotics"><img class="screenshot-banner" src="${path}/static/images/robotics-suite-banner.png" alt="Robotics banner" /></a></div>
           <a href="/${lang}/robotics"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-robotics.jpg" alt="Robotics Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/robotics"><h3>${_('Dive into Robotics.')}</h3></a>
@@ -170,7 +171,7 @@
       </div>
 -->
 
-<!--
+
       <div class="row top-margin">
         <div class="col-xs-12 text-center">
           <div class="spin-banner"><a href="/${lang}/jam"><img class="screenshot-banner" src="${path}/static/images/jam-banner.png" alt="Jam banner" /></a></div>
@@ -179,7 +180,7 @@
           <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
         </div>
       </div>
--->
+
       <div class="row top-margin">
         <div class="col-xs-12 text-center">
           <div class="spin-banner"><a href="/${lang}/python-classroom"><img class="screenshot-banner" src="${path}/static/images/python-classroom/python-classroom-banner.png" alt="Python Classroom banner" /></a></div>
