--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -96,7 +96,7 @@
             <h3>${_('Everything')}</h3>
             </div>
             <div class="col-md-3">
-            <p>${Markup(_('%sMB dvd iso')) % global_variables.iso_size['aarch64_ev']}</p>
+            <p>${Markup(_('%sMB netinstall iso')) % global_variables.iso_size['aarch64_ev']}</p>
             </div>
             <div class="col-md-4">
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_alt_id']}/Everything/aarch64/iso/Fedora-Everything-netinst-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="https://getfedora.org/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-aarch64-CHECKSUM">${_('Verify')}</a></p>
@@ -476,7 +476,7 @@
             <h3>${_('Everything')}</h3>
             </div>
             <div class="col-md-3">
-            <p>${Markup(_('%sMB dvd iso')) % global_variables.iso_size['ppc64le_ev']}</p>
+            <p>${Markup(_('%sMB netinstall iso')) % global_variables.iso_size['ppc64le_ev']}</p>
             </div>
             <div class="col-md-4">
             <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64le/iso/Fedora-Everything-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="https://getfedora.org/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64le-CHECKSUM">${_('Verify')}</a></p>
@@ -790,7 +790,7 @@
             <h3>${_('Everything')}</h3>
             </div>
             <div class="col-md-3">
-            <p>${Markup(_('%sMB dvd iso')) % global_variables.iso_size['s390x_ev']}</p>
+            <p>${Markup(_('%sMB netinstall iso')) % global_variables.iso_size['s390x_ev']}</p>
             </div>
             <div class="col-md-4">
             <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/s390x/iso/Fedora-Everything-netinst-s390x-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}.iso">${_('Download')}</a> | <a href="https://getfedora.org/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-s390x-CHECKSUM">${_('Verify')}</a></p>
