alt: cloud: pull aarch64 info from fedimg, remove x86_64 standard images
This commit removes the standarm images for x86_64 so that we now only
have one x86_64 image and one aarch64 image on the website. It also
changes it so that the aarch64 image information is pulled from datagrepper
(the messages that were published by fedimg).

--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -279,7 +279,6 @@
       <div class="row">
         <div class="col-sm-12 product-feature">
         <p>${_('The links below will provide you listings of available AMIs by region with buttons to launch them in your Amazon Web Services account. AMI IDs for usage with the AWS Console or command-line tools are also provided.')}</p>
-        <p>${_('All images are available in two formats: a GP2 format which uses faster SSD storage, and a standard format which is more suitable if you have infrequently accessed data and you want to keep storage cost low.')}</p>
         </div>
       </div>
       <div class="row">
@@ -288,16 +287,16 @@
             <img src="/static/images/cloud.png" />
             </div>
             <div class="col-sm-7">
-            <h3>${_('GP2 HVM AMIs')}</h3>
+            <h3>${_('x86_64 AMIs')}</h3>
             </div>
             <div class="col-sm-4">
-            <p class="download ec2" data-toggle="modal" data-target=".GP2-base-EC2-desktop">${_('Click to launch')}</p>
-            <div class="modal fade GP2-base-EC2-desktop" tabindex="-1" role="dialog" aria-hidden="true">
+            <p class="download ec2" data-toggle="modal" data-target=".x86_64-base-EC2-desktop">${_('Click to launch')}</p>
+            <div class="modal fade x86_64-base-EC2-desktop" tabindex="-1" role="dialog" aria-hidden="true">
               <div class="modal-dialog modal-cloud">
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
-                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s GP2 Base Cloud HVM AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
+                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s x86_64 Cloud Base AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
                   </div>
                   <table class="table table-hover">
                     <thead>
@@ -309,9 +308,9 @@
                     </thead>
                     <tbody>
                       <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.GP2_HVM_base_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.GP2_HVM_base_AMI" class="hidden-xs">${global_variables.GP2_HVM_base_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.GP2_HVM_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.GP2_HVM_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                        <td py:if="r.code in global_variables.X86_64_base_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.X86_64_base_AMI" class="hidden-xs">${global_variables.X86_64_base_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.X86_64_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.X86_64_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
                       </tr>
                     </tbody>
                   </table>
@@ -325,16 +324,16 @@
             <img src="/static/images/cloud.png" />
             </div>
             <div class="col-sm-7">
-            <h3>${_('arm64 AMIs')}</h3>
+            <h3>${_('aarch64 AMIs')}</h3>
             </div>
             <div class="col-sm-4">
-            <p class="download ec2" data-toggle="modal" data-target=".ARM64-base-EC2-desktop">${_('Click to launch')}</p>
-            <div class="modal fade ARM64-base-EC2-desktop" tabindex="-1" role="dialog" aria-hidden="true">
+            <p class="download ec2" data-toggle="modal" data-target=".aarch64-base-EC2-desktop">${_('Click to launch')}</p>
+            <div class="modal fade aarch64-base-EC2-desktop" tabindex="-1" role="dialog" aria-hidden="true">
               <div class="modal-dialog modal-cloud">
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
-                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s arm64 Base Cloud AMIs')) % {'rel':global_variables.release['curr_id']}} (2018-11-28)</h4>
+                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s aarch64 Cloud Base AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
                   </div>
                   <table class="table table-hover">
                     <thead>
@@ -345,47 +344,10 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.ARM64_base_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.ARM64_base_AMI" class="hidden-xs">${global_variables.ARM64_base_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.ARM64_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.ARM64_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-sm-1">
-            <img src="/static/images/cloud.png" />
-            </div>
-            <div class="col-sm-7">
-            <h3>${_('Standard HVM AMIs')}</h3>
-            </div>
-            <div class="col-sm-4">
-            <p class="download ec2" data-toggle="modal" data-target=".base-EC2-desktop">${_('Click to launch')}</p>
-            <div class="modal fade base-EC2-desktop" tabindex="-1" role="dialog" aria-hidden="true">
-              <div class="modal-dialog modal-cloud">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
-                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s Standard Base Cloud HVM AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
-                  </div>
-                  <table class="table table-hover">
-                    <thead>
-                      <tr>
-                        <th>${_('Region')}</th>
-                        <th class="hidden-xs">${_('AMI ID')}</th>
-                        <th class="text-center">${_('Launch')}</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.HVM_base_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.HVM_base_AMI" class="hidden-xs">${global_variables.HVM_base_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.HVM_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.HVM_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                      <tr py:for="r in global_variables.aarch64_EC2_regions">
+                        <td py:if="r.code in global_variables.AARCH64_base_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.AARCH64_base_AMI" class="hidden-xs">${global_variables.AARCH64_base_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.AARCH64_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.AARCH64_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
                       </tr>
                     </tbody>
                   </table>
@@ -409,8 +371,6 @@
       <div class="row">
         <div class="col-xs-12 product-feature">
         <p>${_('The links below will provide you listings of available AMIs by region with buttons to launch them in your Amazon Web Services account. AMI IDs for usage with the AWS Console or command-line tools are also provided.')}</p>
-        <p>${_('All images are available in two formats: a GP2 format which uses faster SSD storage, and a standard format which is more suitable if you have infrequently accessed data and you want to keep storage cost low.')}</p>
-        <p>${_('If you know you need a paravirtual format image for EC2, use the Paravirtual (PV) format. If you\'re unsure which image to choose, use the Hardware Virtual Machine (HVM) format. It can provide the same or better performance than PV images.')}</p>
         </div>
       </div>
       <div class="row">
@@ -419,84 +379,14 @@
             <img src="/static/images/cloud.png" />
             </div>
             <div class="col-xs-9">
-            <h3>${_('GP2 HVM AMIs')}</h3>
-            <p class="download ec2" data-toggle="modal" data-target=".GP2-base-EC2-mobile">${_('Click to launch')}</p>
-            <div class="modal fade GP2-base-EC2-mobile" tabindex="-1" role="dialog" aria-hidden="true">
-              <div class="modal-dialog modal-cloud">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
-                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s GP2 Base Cloud HVM AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
-                  </div>
-                  <table class="table table-hover">
-                    <thead>
-                      <tr>
-                        <th>${_('Region')}</th>
-                        <th class="hidden-xs">${_('AMI ID')}</th>
-                        <th class="text-center">${_('Launch')}</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.GP2_HVM_base_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.GP2_HVM_base_AMI" class="hidden-xs">${global_variables.GP2_HVM_base_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.GP2_HVM_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.GP2_HVM_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-            </div>
-        </div>
-        <div class="white">
-            <div class="col-xs-3">
-            <img src="/static/images/cloud.png" />
-            </div>
-            <div class="col-xs-9">
-            <h3>${_('arm64 AMIs')}</h3>
-            <p class="download ec2" data-toggle="modal" data-target=".ARM64-base-EC2-mobile">${_('Click to launch')}</p>
-            <div class="modal fade ARM64-base-EC2-mobile" tabindex="-1" role="dialog" aria-hidden="true">
-              <div class="modal-dialog modal-cloud">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
-                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s arm64 Base Cloud HVM AMIs')) % {'rel':global_variables.release['curr_id']}} (2018-11-28)</h4>
-                  </div>
-                  <table class="table table-hover">
-                    <thead>
-                      <tr>
-                        <th>${_('Region')}</th>
-                        <th class="hidden-xs">${_('AMI ID')}</th>
-                        <th class="text-center">${_('Launch')}</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.ARM64_base_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.ARM64_base_AMI" class="hidden-xs">${global_variables.ARM64_base_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.ARM64_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.ARM64_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-            </div>
-        </div>
-        <div class="white">
-            <div class="col-xs-3">
-            <img src="/static/images/cloud.png" />
-            </div>
-            <div class="col-xs-9">
-            <h3>${_('Standard HVM AMIs')}</h3>
+            <h3>${_('x86_64 AMIs')}</h3>
             <p class="download ec2" data-toggle="modal" data-target=".base-EC2-mobile">${_('Click to launch')}</p>
             <div class="modal fade base-EC2-mobile" tabindex="-1" role="dialog" aria-hidden="true">
               <div class="modal-dialog modal-cloud">
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
-                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s Standard Base Cloud HVM AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
+                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s x86_64 Cloud Base AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
                   </div>
                   <table class="table table-hover">
                     <thead>
@@ -508,9 +398,9 @@
                     </thead>
                     <tbody>
                       <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.HVM_base_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.HVM_base_AMI" class="hidden-xs">${global_variables.HVM_base_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.HVM_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.HVM_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                        <td py:if="r.code in global_variables.X86_64_base_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.X86_64_base_AMI" class="hidden-xs">${global_variables.X86_64_base_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.X86_64_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.X86_64_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
                       </tr>
                     </tbody>
                   </table>
@@ -518,7 +408,42 @@
               </div>
             </div>
             </div>
-          </div>
+        </div>
+        <div class="white">
+            <div class="col-xs-3">
+            <img src="/static/images/cloud.png" />
+            </div>
+            <div class="col-xs-9">
+            <h3>${_('aarch64 AMIs')}</h3>
+            <p class="download ec2" data-toggle="modal" data-target=".AARCH64-base-EC2-mobile">${_('Click to launch')}</p>
+            <div class="modal fade AARCH64-base-EC2-mobile" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog modal-cloud">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
+                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s aarch64 Cloud Base AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
+                  </div>
+                  <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th>${_('Region')}</th>
+                        <th class="hidden-xs">${_('AMI ID')}</th>
+                        <th class="text-center">${_('Launch')}</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr py:for="r in global_variables.aarch64_EC2_regions">
+                        <td py:if="r.code in global_variables.AARCH64_base_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.AARCH64_base_AMI" class="hidden-xs">${global_variables.AARCH64_base_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.AARCH64_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.AARCH64_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            </div>
+        </div>
       </div>
     </div>
   </div>
